@@ -8,7 +8,10 @@
 	is optimized;
 	* app/gui.c: In gui_update_title() title is now updated in idle mode
 	to reduce CPU overhead;
-	* app/xm.c, app/main.h: some unused headers are removed.
+	* app/xm.c, app/main.h: Some unused headers are removed;
+	* app/sample-display.c, app/sample-editor.c, app/track-editor.c,
+	app/tracker.c: Seprecated gtk_idle_add() function is replaced by
+	g_idle_add().
 
 2018-09-18  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/audioconfig.c, app/gui-settings.c, app/gui-subs.h,
